# 0.Core

./: api_0bit_app_nginx.conf
0.Bits/Dashboard/Admin/Backend/p2p-engine/: .env.example  .gitignore  CHANGELOG.md  MIGRATION.md  README.md  WALKTHROUGH.md  export_daily_ledger.py  main.py  pyproject.toml  test_matcher.py
0.Bits/Dashboard/Admin/Backend/p2p-engine/docs/: binance_p2p_api_documentation.md  januar_api_full.md
0.Bits/Dashboard/Admin/Backend/p2p-engine/scripts/: ad_analytics.py  analyze_cop_chats.py  check_cop_db.py  check_db.py  check_fiats.py  check_fp.py  check_fp_accounts.py  check_stuck.py  deploy.sh  fifo_pnl_2026.py  fix_env.sh  fix_env_unix.sh  fix_orders.py  fix_stale.py  force_sync_fp.py  pnl_2026.py  reconcile_buys.py  reset_order.py  reset_stuck.py  reset_stuck_identified.py  reset_welcome.py  revert_stale.py  send_link.py  test_brl_ad.py  test_chat_completed.py  test_cop_buy.py  test_fp_api.py  test_order_detail.py  today_cop_orders.py
0.Bits/Dashboard/Admin/Backend/p2p-engine/src/: dashboard.html
0.Bits/Dashboard/Admin/Backend/p2p-engine/tests/: test_amount_matcher.py  test_audit_fixes.py  test_binance.py  test_binance_brl.py  test_buy_safety_fixes.py  test_chat_fallback_retry.py  test_cop_buy.py  test_cop_handler.py  test_cop_tracker.py  test_deployment_blockers.py  test_idempotency.py  test_januar.py  test_januar_converter.py  test_januar_payout.py  test_kyc.py  test_kyc_screening_logic.py  test_kyc_status_endpoints.py  test_name_matcher.py  test_p0_fixes.py  test_payment_matching.py  test_persistence.py  test_reference_matcher.py  (+6 more)
(+251 files in other folders)
